--- a/vignettes/weighting.Rmd
+++ b/vignettes/weighting.Rmd
@@ -77,26 +77,28 @@ knitr::kable(wide[new_order, ], digits = 3, row.names = FALSE)
 
 | borrowing|variable    |est_ci.glm              |est_ci.BayesPPD         |est_ci.psborrow2        |
 |---------:|:-----------|:-----------------------|:-----------------------|:-----------------------|
-|      0.00|(Intercept) |0.646 (-0.038, 1.357)   |0.664 (-0.045, 1.386)   |0.665 (-0.038, 1.394)   |
-|      0.25|(Intercept) |0.394 (-0.131, 0.931)   |0.405 (-0.134, 0.949)   |0.404 (-0.131, 0.938)   |
-|      0.50|(Intercept) |0.293 (-0.158, 0.751)   |0.294 (-0.159, 0.749)   |0.303 (-0.145, 0.761)   |
-|      0.75|(Intercept) |0.235 (-0.168, 0.642)   |0.235 (-0.177, 0.647)   |0.239 (-0.166, 0.647)   |
-|      1.00|(Intercept) |0.196 (-0.172, 0.567)   |0.198 (-0.174, 0.566)   |0.200 (-0.173, 0.574)   |
-|      0.00|cov1        |-0.771 (-1.465, -0.095) |-0.801 (-1.493, -0.116) |-0.805 (-1.512, -0.122) |
-|      0.25|cov1        |-0.781 (-1.340, -0.231) |-0.799 (-1.363, -0.237) |-0.797 (-1.359, -0.245) |
-|      0.50|cov1        |-0.769 (-1.252, -0.291) |-0.777 (-1.257, -0.294) |-0.781 (-1.273, -0.296) |
-|      0.75|cov1        |-0.758 (-1.191, -0.329) |-0.761 (-1.204, -0.322) |-0.765 (-1.208, -0.335) |
-|      1.00|cov1        |-0.749 (-1.145, -0.357) |-0.752 (-1.144, -0.363) |-0.754 (-1.150, -0.359) |
-|      0.00|cov2        |-0.730 (-1.472, -0.008) |-0.753 (-1.496, -0.013) |-0.752 (-1.490, -0.005) |
-|      0.25|cov2        |-0.559 (-1.114, -0.014) |-0.571 (-1.121, -0.032) |-0.567 (-1.129, -0.018) |
-|      0.50|cov2        |-0.459 (-0.926, 0.003)  |-0.458 (-0.914, -0.004) |-0.469 (-0.938, 0.002)  |
-|      0.75|cov2        |-0.398 (-0.811, 0.011)  |-0.406 (-0.818, 0.001)  |-0.406 (-0.819, 0.005)  |
-|      1.00|cov2        |-0.358 (-0.731, 0.013)  |-0.363 (-0.729, 0.006)  |-0.362 (-0.734, 0.016)  |
-|      0.00|trt         |0.154 (-0.558, 0.871)   |0.166 (-0.561, 0.909)   |0.164 (-0.561, 0.907)   |
-|      0.25|trt         |0.349 (-0.183, 0.885)   |0.356 (-0.183, 0.891)   |0.352 (-0.187, 0.902)   |
-|      0.50|trt         |0.405 (-0.082, 0.894)   |0.410 (-0.066, 0.898)   |0.408 (-0.083, 0.901)   |
-|      0.75|trt         |0.434 (-0.031, 0.900)   |0.441 (-0.024, 0.895)   |0.437 (-0.044, 0.910)   |
-|      1.00|trt         |0.452 (-0.000, 0.905)   |0.457 (-0.005, 0.909)   |0.453 (0.006, 0.909)    |
+|      0.00|(Intercept) |0.646 (-0.038, 1.357)   |0.651 (-0.046, 1.360)   |0.666 (-0.044, 1.384)   |
+|      0.25|(Intercept) |0.394 (-0.131, 0.931)   |0.401 (-0.103, 0.938)   |0.404 (-0.129, 0.950)   |
+|      0.50|(Intercept) |0.293 (-0.158, 0.751)   |0.302 (-0.132, 0.756)   |0.301 (-0.147, 0.746)   |
+|      0.75|(Intercept) |0.235 (-0.168, 0.642)   |0.241 (-0.153, 0.650)   |0.239 (-0.165, 0.643)   |
+|      1.00|(Intercept) |0.196 (-0.172, 0.567)   |0.201 (-0.150, 0.574)   |0.200 (-0.165, 0.570)   |
+|      0.00|cov1        |-0.771 (-1.465, -0.095) |-0.782 (-1.489, -0.084) |-0.794 (-1.474, -0.111) |
+|      0.25|cov1        |-0.781 (-1.340, -0.231) |-0.797 (-1.343, -0.253) |-0.795 (-1.356, -0.246) |
+|      0.50|cov1        |-0.769 (-1.252, -0.291) |-0.782 (-1.256, -0.308) |-0.782 (-1.270, -0.310) |
+|      0.75|cov1        |-0.758 (-1.191, -0.329) |-0.766 (-1.194, -0.346) |-0.769 (-1.201, -0.328) |
+|      1.00|cov1        |-0.749 (-1.145, -0.357) |-0.760 (-1.154, -0.373) |-0.757 (-1.147, -0.366) |
+|      0.00|cov2        |-0.730 (-1.472, -0.008) |-0.753 (-1.504, -0.017) |-0.751 (-1.491, -0.021) |
+|      0.25|cov2        |-0.559 (-1.114, -0.014) |-0.568 (-1.130, -0.025) |-0.567 (-1.126, -0.024) |
+|      0.50|cov2        |-0.459 (-0.926, 0.003)  |-0.467 (-0.926, 0.002)  |-0.464 (-0.930, -0.006) |
+|      0.75|cov2        |-0.398 (-0.811, 0.011)  |-0.405 (-0.816, 0.010)  |-0.403 (-0.816, 0.011)  |
+|      1.00|cov2        |-0.358 (-0.731, 0.013)  |-0.360 (-0.734, 0.011)  |-0.359 (-0.731, 0.006)  |
+|      0.00|trt         |0.154 (-0.558, 0.871)   |0.165 (-0.558, 0.880)   |0.155 (-0.574, 0.885)   |
+|      0.25|trt         |0.349 (-0.183, 0.885)   |0.357 (-0.172, 0.894)   |0.353 (-0.197, 0.887)   |
+|      0.50|trt         |0.405 (-0.082, 0.894)   |0.408 (-0.060, 0.887)   |0.410 (-0.079, 0.889)   |
+|      0.75|trt         |0.434 (-0.031, 0.900)   |0.435 (-0.033, 0.901)   |0.440 (-0.028, 0.911)   |
+|      1.00|trt         |0.452 (-0.000, 0.905)   |0.456 (0.011, 0.914)    |0.456 (-0.000, 0.909)   |
+
+
 
 
 ```r
@@ -109,7 +111,10 @@ ggplot(logistic_res_df, aes(x = borrowing_x, y = estimate, group = fitter, colou
   facet_wrap(~variable, scales = "free")
 ```
 
-<img src="figure-weighting-logistic_plot-1.png" alt="plot of chunk logistic_plot" style="display: block; margin: auto;" />
+<div class="figure" style="text-align: center">
+<img src="figure-weighting-logistic_plot-1.png" alt="plot of chunk logistic_plot"  />
+<p class="caption">plot of chunk logistic_plot</p>
+</div>
 
 # Exponential models
 
@@ -123,13 +128,13 @@ The model has a treatment indicator and two covariates, `eventtime ~ trt + cov1 
 
 ```r
 head(sim_data_exp)
-#   id   eventtime status trt cov1 cov2 ext censor
-# 1  1 0.177211640      1   0    0    1   0      0
-# 2  2 0.005410661      1   0    1    0   0      0
-# 3  3 0.246005631      1   0    1    0   0      0
-# 4  4 0.087423920      1   0    1    0   0      0
-# 5  5 0.430790952      1   0    0    0   0      0
-# 6  6 0.006133265      1   0    1    0   0      0
+#   id  eventtime status trt cov1 cov2 ext censor
+# 1  1 0.10993980      1   0    0    1   0      0
+# 2  2 0.31680837      1   0    1    0   0      0
+# 3  3 0.03135190      1   0    1    0   0      0
+# 4  4 0.09291460      1   0    1    0   0      0
+# 5  5 0.29601129      1   0    0    0   0      0
+# 6  6 0.07704004      1   0    1    0   0      0
 ```
 
 
@@ -165,28 +170,30 @@ knitr::kable(wide[new_order, ], digits = 3, row.names = FALSE)
 
 
 
-| borrowing|variable    |est_ci.glm           |est_ci.BayesPPD      |est_ci.psborrow2     |
-|---------:|:-----------|:--------------------|:--------------------|:--------------------|
-|      0.00|(Intercept) |1.504 (1.170, 1.837) |1.486 (1.143, 1.796) |1.483 (1.148, 1.803) |
-|      0.25|(Intercept) |1.321 (1.064, 1.579) |1.313 (1.053, 1.567) |1.313 (1.056, 1.565) |
-|      0.50|(Intercept) |1.304 (1.081, 1.526) |1.301 (1.074, 1.517) |1.296 (1.061, 1.514) |
-|      0.75|(Intercept) |1.300 (1.101, 1.498) |1.295 (1.094, 1.489) |1.293 (1.088, 1.484) |
-|      1.00|(Intercept) |1.299 (1.117, 1.480) |1.296 (1.117, 1.471) |1.293 (1.101, 1.473) |
-|      0.00|cov1        |0.954 (0.625, 1.284) |0.957 (0.621, 1.292) |0.960 (0.614, 1.307) |
-|      0.25|cov1        |0.961 (0.692, 1.230) |0.965 (0.698, 1.239) |0.962 (0.690, 1.236) |
-|      0.50|cov1        |0.966 (0.731, 1.200) |0.966 (0.736, 1.208) |0.967 (0.729, 1.212) |
-|      0.75|cov1        |0.967 (0.757, 1.178) |0.970 (0.763, 1.180) |0.970 (0.756, 1.189) |
-|      1.00|cov1        |0.968 (0.776, 1.161) |0.968 (0.773, 1.163) |0.971 (0.783, 1.169) |
-|      0.00|cov2        |0.599 (0.247, 0.951) |0.595 (0.214, 0.957) |0.589 (0.217, 0.956) |
-|      0.25|cov2        |0.314 (0.050, 0.578) |0.311 (0.044, 0.577) |0.311 (0.048, 0.574) |
-|      0.50|cov2        |0.253 (0.031, 0.476) |0.251 (0.023, 0.482) |0.255 (0.031, 0.482) |
-|      0.75|cov2        |0.224 (0.027, 0.420) |0.224 (0.029, 0.420) |0.224 (0.028, 0.423) |
-|      1.00|cov2        |0.206 (0.028, 0.384) |0.204 (0.028, 0.379) |0.205 (0.022, 0.386) |
-|      0.00|trt         |1.324 (0.979, 1.670) |1.329 (0.988, 1.683) |1.332 (0.985, 1.687) |
-|      0.25|trt         |1.606 (1.348, 1.864) |1.603 (1.348, 1.865) |1.606 (1.343, 1.861) |
-|      0.50|trt         |1.640 (1.404, 1.877) |1.636 (1.397, 1.872) |1.638 (1.402, 1.870) |
-|      0.75|trt         |1.653 (1.426, 1.879) |1.647 (1.418, 1.868) |1.648 (1.422, 1.872) |
-|      1.00|trt         |1.659 (1.438, 1.879) |1.656 (1.430, 1.873) |1.656 (1.421, 1.876) |
+| borrowing|variable    |est_ci.glm             |est_ci.BayesPPD        |est_ci.psborrow2       |
+|---------:|:-----------|:----------------------|:----------------------|:----------------------|
+|      0.00|(Intercept) |1.548 (1.215, 1.881)   |1.528 (1.168, 1.863)   |1.532 (1.179, 1.861)   |
+|      0.25|(Intercept) |1.249 (0.991, 1.506)   |1.242 (0.972, 1.504)   |1.241 (0.975, 1.492)   |
+|      0.50|(Intercept) |1.188 (0.966, 1.410)   |1.177 (0.948, 1.400)   |1.182 (0.947, 1.404)   |
+|      0.75|(Intercept) |1.160 (0.961, 1.359)   |1.155 (0.952, 1.354)   |1.154 (0.950, 1.354)   |
+|      1.00|(Intercept) |1.144 (0.962, 1.325)   |1.138 (0.958, 1.313)   |1.140 (0.949, 1.324)   |
+|      0.00|cov1        |1.250 (0.920, 1.579)   |1.256 (0.922, 1.579)   |1.251 (0.922, 1.583)   |
+|      0.25|cov1        |1.167 (0.898, 1.437)   |1.164 (0.892, 1.442)   |1.168 (0.901, 1.442)   |
+|      0.50|cov1        |1.153 (0.919, 1.387)   |1.159 (0.924, 1.396)   |1.155 (0.919, 1.395)   |
+|      0.75|cov1        |1.147 (0.936, 1.357)   |1.148 (0.935, 1.358)   |1.149 (0.938, 1.359)   |
+|      1.00|cov1        |1.143 (0.951, 1.336)   |1.146 (0.950, 1.339)   |1.143 (0.948, 1.341)   |
+|      0.00|cov2        |0.070 (-0.282, 0.422)  |0.065 (-0.301, 0.419)  |0.064 (-0.296, 0.419)  |
+|      0.25|cov2        |-0.025 (-0.289, 0.238) |-0.025 (-0.296, 0.241) |-0.026 (-0.299, 0.244) |
+|      0.50|cov2        |-0.012 (-0.235, 0.211) |-0.012 (-0.239, 0.216) |-0.012 (-0.234, 0.210) |
+|      0.75|cov2        |-0.001 (-0.197, 0.195) |-0.001 (-0.202, 0.202) |-0.001 (-0.198, 0.199) |
+|      1.00|cov2        |0.007 (-0.171, 0.185)  |0.008 (-0.170, 0.189)  |0.006 (-0.169, 0.188)  |
+|      0.00|trt         |1.319 (0.974, 1.665)   |1.325 (0.984, 1.681)   |1.324 (0.977, 1.677)   |
+|      0.25|trt         |1.704 (1.446, 1.962)   |1.704 (1.448, 1.964)   |1.702 (1.443, 1.961)   |
+|      0.50|trt         |1.768 (1.532, 2.005)   |1.768 (1.529, 2.001)   |1.766 (1.528, 2.004)   |
+|      0.75|trt         |1.796 (1.570, 2.022)   |1.792 (1.557, 2.014)   |1.792 (1.563, 2.015)   |
+|      1.00|trt         |1.811 (1.591, 2.032)   |1.809 (1.586, 2.024)   |1.810 (1.584, 2.022)   |
+
+
 
 
 ```r
@@ -199,4 +206,7 @@ ggplot(res_df, aes(x = borrowing_x, y = estimate, group = fitter, colour = fitte
   facet_wrap(~variable, scales = "free")
 ```
 
-<img src="figure-weighting-exp_plot-1.png" alt="plot of chunk exp_plot" style="display: block; margin: auto;" />
+<div class="figure" style="text-align: center">
+<img src="figure-weighting-exp_plot-1.png" alt="plot of chunk exp_plot"  />
+<p class="caption">plot of chunk exp_plot</p>
+</div>
