--- a/vignettes/original/_propensity_scores.Rmd
+++ b/vignettes/original/_propensity_scores.Rmd
@@ -72,7 +72,7 @@ love.plot(weightit_model, stars = "std")
 
 The PS values can be copied into the data set and the analysis object can be constructed as before.
 
-```{r covs-no-echo, echo= FALSE}
+```{r covs-no-echo, include = FALSE}
 example_dataframe$att <- weightit_model$weights
 
 example_matrix_att <- create_data_matrix(
@@ -163,7 +163,7 @@ example_matrix_match <- create_data_matrix(
 )
 ```
 
-```{r, echo = FALSE}
+```{r, include = FALSE}
 analysis_match <- create_analysis_obj(
   data_matrix = example_matrix_match,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
@@ -174,7 +174,7 @@ analysis_match <- create_analysis_obj(
 result_match <- mcmc_sample(analysis_match, seed = 123)
 ```
 
-``{r, eval = FALSE}
+```{r, eval = FALSE}
 analysis_match <- create_analysis_obj(
   data_matrix = example_matrix_match,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000)),
@@ -193,7 +193,7 @@ is equivalent to fixed power prior weights. This allows for the combination of m
 IPTW + commensurate prior approach.
 
 
-```{r, echo = FALSE}
+```{r, include = FALSE}
 analysis_iptw_bdb <- create_analysis_obj(
   data_matrix = example_matrix_att,
   outcome = outcome_surv_exponential("time", "cnsr", normal_prior(0, 10000), weight_var = "att"),
@@ -221,7 +221,7 @@ result_iptw_bdb <- mcmc_sample(analysis_iptw_bdb, seed = 123)
 We can also use weights to specify a fixed power prior model. Here we set the power parameter $\alpha = 0.1$
 for the external controls.
 
-```{r, echo = FALSE}
+```{r, include = FALSE}
 example_matrix_pp01 <- cbind(example_matrix, pp_alpha = ifelse(example_matrix[, "ext"] == 1, 0.1, 1))
 
 analysis_pp01 <- create_analysis_obj(
@@ -253,7 +253,7 @@ result_pp01 <- mcmc_sample(analysis_pp01, seed = 123)
 
 For comparison, we also fit a full borrowing, a no borrowing, and a BDB model without weights.
 
-```{r, echo = FALSE}
+```{r, include = FALSE}
 result_full <- mcmc_sample(
   create_analysis_obj(
     data_matrix = example_matrix,
